--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,9 @@
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "engines": {
+      "node": ">=16.20.1 <18.7.0"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
