--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "type": "module",
     "devDependencies": {},
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node index.js"
     },
     "engines": {
       "node": ">=16.20.1 <18.7.0"
